@@ -5,7 +5,7 @@ ENV_CROSS_COMPILE:=$(CROSS_COMPILE)
 
 VERSION = 1
 PATCHLEVEL = 3
-SUBLEVEL = 25
+SUBLEVEL = 26
 EXTRAVERSION =
 #NAME=Zonked Quokka
 
